Fix blockquote contrast and list item spacing

--- a/_sass/general/themes.scss
+++ b/_sass/general/themes.scss
@@ -25,7 +25,7 @@ html.light {
     --form-bg-color: #f6f6f6;
     --form-shadow-color: #bebebe;
 
-    --blockquote-bg-color: rgb(216, 216, 216);
+    --blockquote-bg-color: rgb(206, 206, 206);
     --blockquote-text-color: #484e55;
     --spoiler-color: #dae3e7;
 }
